projects/vb6parse/snapshots/syntax/library/functions/file/curdir/curdir_in_print.snap
---
source: projects/vb6parse/src/syntax/library/functions/file/curdir.rs
assertion_line: 839
expression: tree
---
root:
  kind: Root
  children:
    - kind: Newline
      text: "\n"
    - kind: PrintStatement
      children:
        - kind: PrintKeyword
          text: Print
        - kind: Whitespace
          text: " "
        - kind: ArgumentList
          children:
            - kind: Argument
              children:
                - kind: StringLiteralExpression
                  children:
                    - kind: StringLiteral
                      text: "\"Current directory: \""
            - kind: Semicolon
              text: ;
            - kind: Whitespace
              text: " "
            - kind: Argument
              children:
                - kind: CallExpression
                  children:
                    - kind: Identifier
                      text: CurDir
                    - kind: LeftParenthesis
                      text: (
                    - kind: ArgumentList
                      children: []
                    - kind: RightParenthesis
                      text: )
        - kind: Newline
          text: "\n"
