projects/vb6parse/snapshots/syntax/library/functions/file/curdir/curdir_save_restore.snap
---
source: projects/vb6parse/src/syntax/library/functions/file/curdir.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: Newline
      text: "\n"
    - kind: AssignmentStatement
      children:
        - kind: IdentifierExpression
          children:
            - kind: Identifier
              text: savedDir
        - kind: Whitespace
          text: " "
        - kind: EqualityOperator
          text: "="
        - kind: Whitespace
          text: " "
        - kind: CallExpression
          children:
            - kind: Identifier
              text: CurDir
            - kind: LeftParenthesis
              text: (
            - kind: ArgumentList
              children: []
            - kind: RightParenthesis
              text: )
        - kind: Newline
          text: "\n"
    - kind: ChDirStatement
      children:
        - kind: ChDirKeyword
          text: ChDir
        - kind: Whitespace
          text: " "
        - kind: StringLiteralExpression
          children:
            - kind: StringLiteral
              text: "\"C:\\Temp\""
    - kind: Newline
      text: "\n"
    - kind: ChDirStatement
      children:
        - kind: ChDirKeyword
          text: ChDir
        - kind: Whitespace
          text: " "
        - kind: IdentifierExpression
          children:
            - kind: Identifier
              text: savedDir
    - kind: Newline
      text: "\n"
